# Gestion-

projet8 (1) (copie)/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projet8.glade  projet8.gladep.bak
projet8 (1) (copie)/autom4te.cache/: output.1  requests  traces.0  traces.1
projet8 (1) (copie)/po/: Makefile  Makefile.in
projet8 (1) (copie)/src/: Etudiant1.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  main.c  projet8
projet8 (1) (copie)/src/.deps/: etudiant.Po
